base::Optional: do not use T::new() but ::new.

This is also adding unit tests that check that the default ctor is not
called.

Bug: 798708
Change-Id: Ib8efb330d10517cb539fa4617e3f4fb3723d1dc0
Reviewed-on: https://chromium-review.googlesource.com/848715
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526804}